--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,14 @@
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
-    </application>
+        <service android:name=".fcm.MyFCM"
+            android:exported="false">
+
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+
+        </service>
+            </application>
 
 </manifest>
